# bevy_unit

./: .gitignore  Cargo.toml  functional.org  readme.org  tips.org  units.org
art/: bone.blend  bone.blend1  workflow.blend  workflow.blend1
assets/: registry.json
assets/blueprints/: Board.glb  Cube.glb  Cylinder.glb  Monkey.glb  Player.glb  Torus.glb
assets/bone/: bone.gltf
assets/female_base/: ani-model4.gltf
assets/levels/: World.glb  World.meta.ron
assets/manual_ex/: origin.gltf
assets/materials/: c_t_eye_00-DXT1.dds  c_t_eyelash_04-DXT1.dds  c_t_eyeshadow_02-DXT5.dds  hs2_head_greybox.glb  minified_nodes.json
assets/materials/shaders/: hs2_head_body_material.wgsl  hs2_head_eye_material.wgsl  hs2_head_eyelashes_material.wgsl  hs2_head_eyeshadow_material.wgsl  hs2_head_head_material.wgsl  manual_material.wgsl
assets/modular_character/: female_socks.glb  female_top.glb
assets/shaders/: manual_material.wgsl
assets/waltz/: ani_model_1.0_20250608.glb  pistol_skeleton2.glb
bevy_docs/: functional.org  tips.org  units.org
bevy_lumen/: Cargo.toml
bevy_shine/: Cargo.toml  readme.org  somenotes.org
bevy_shine/examples/: bakery.rs  cornell-box.rs  minimal.rs  pica.rs
bevy_shine/refer/: light.rs  mesh.rs  prepass.rs
bevy_shine/refer/mesh_material/: instance.rs  material.rs  mesh.rs  mod.rs
bevy_shine/shaders/: post_processing_demo.wgsl  utils.wgsl
bevy_shine/src/: headless_renderer.rs  lib.rs  light.rs  mesh.rs  overlay.rs  post_process.rs  post_process_demo.rs  prelude.rs  prepass.rs  transform.rs
bevy_shine/src/mesh_material/: instance.rs  material.rs  mesh.rs  mod.rs
bevy_shine/src/shaders/: prepass.wgsl  shader.wgsl
bevy_shine/src/voxel_cone_tracing/: mod.rs
bevy_waltz/: Cargo.toml  readme.org
bevy_waltz/examples/: example-outline.rs
bevy_waltz/src/: atmosphere.rs  config.rs  lib.rs  perf.rs  utils.rs
bevy_waltz/src/camera/: arm.rs  config.rs  interface.rs  kind.rs  mod.rs  rig.rs  system.rs
bevy_waltz/src/camera/ref/: arm.rs  kind.rs  rig.rs
bevy_waltz/src/camera_ctrl/: actions.rs  config.rs  mod.rs  physics.rs
bevy_waltz/src/camera_ctrl/camera/: cursor.rs  kind.rs  mod.rs  rig.rs
bevy_waltz/src/camera_ctrl/camera/rig/: arm.rs
bevy_waltz/src/character/: animating.rs  assets.rs  config.rs  mod.rs  sound.rs  weapon.rs
bevy_waltz/src/character/ctrl_systems/: info_system.rs  mod.rs  spatial_ext_facade.rs
bevy_waltz/src/character/level_switch/: helper.rs  jungle_gym.rs
bevy_waltz/src/character_controller/: action_demo.rs  actions.rs  mod.rs
bevy_waltz/src/character_controller/camera/: kind.rs  mod.rs  rig.rs
bevy_waltz/src/character_controller/camera/rig/: arm.rs
bevy_waltz/src/character_ctrl/: animating.rs  mod.rs
bevy_waltz/src/character_ctrl/ctrl_systems/: mod.rs
bevy_waltz/src/character_ctrl/level_switch/: helper.rs  jungle_gym.rs  mod.rs
bevy_waltz/src/control/: camera_ctrl.rs  character_ctrl.rs  demo.rs  fixed_update_inspection.rs  mod.rs
bevy_waltz/src/gp/: mod.rs  power.rs
bevy_waltz/src/level_switch/: helper.rs  jungle_gym.rs  mod.rs
docs/: functional.org  tips.org
example/: example.org
examples/: ecs.rs  event.txt  example-1-1-0.rs  example-animation.rs  example-animation_masks.rs  example-bone.rs  example-collider.rs  example-distancejoint.rs  example-gp.rs  example-log.rs  example-manual-materials.rs  example-materials.rs  example-rt.rs  example-ui.rs  example.org
examples/bevy_deck/: bevy_deck.rs  gui.rs
examples/hs2_head/: body.rs  camera.rs  eye.rs  eye_verify.rs  eyelash.rs  eyeshadow.rs  head.rs  headless.rs  hs2_head.rs  mat_convert.rs  raytracing.rs
modular_character/: Cargo.toml  readme.org
modular_character/src/: asset_loader.rs  lib.rs
modular_character/src/core/: animations.rs  assemble.rs  billboard.rs  mod.rs  scenes.rs  walk_tree.rs
modular_character/src/modular/: components.rs  mod.rs
render_pass/: Cargo.toml
src/: animation_demo.rs  bone_demo.rs  cloth_demo.rs  dev.rs  headless_renderer.rs  main.rs  modeling.rs  scene.rs  ui.rs
src/dev/: dev_editor.rs
ue_doc/: UE5_siji.md
units/: analyzer.py  export_blender_nodes.py
units/animation_blending/: Cargo.toml
units/animation_blending/assets/animation_graphs/: animation_blending.graph.ron
units/animation_blending/src/: main.rs
units/bevy_cloth/: Cargo.toml  readme.org
units/bevy_cloth/examples/: 01-cannonball2d.rs  02-cannonball3d.rs  03-billiard.rs
units/bone_attachments/: Cargo.toml
units/bone_attachments/src/: lib.rs  main.rs  relationship.rs  scene.rs
units/modular_character/: Cargo.toml  readme.org
units/modular_character/assets/modular_character/: female_body.glb  female_bot.glb  female_shoes.glb
units/modular_character/examples/: bionic.rs
units/modular_character/src/: camera.rs  components.rs  lib.rs  main.rs
units/modular_character/src/_refer/: asset_loader.rs
units/modular_character/src/_refer/core/: interface.rs  mod.rs  scenes.rs
units/modular_character/src/modular/: components.rs  mod.rs
units/tps_camera/: Cargo.toml
units/tps_camera/src/: dolly_camera.rs  main.rs  orbit_camera.rs  physic_camera.rs  waltz_camera.rs
units/winit_drag_drop/: Cargo.toml  readme.org
units/winit_drag_drop/src/: fill.rs  main.rs
