[package]
name = "bevy_workflow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
        "bevy_shine",
        "bevy_waltz",
        "units/modular_character",
        "units/tps_camera",
]

[dependencies]
avian3d = "0.3.1"
bevy = { version = "0.16.1", features = ["wayland", "dynamic_linking"] }
bevy_shine = { path = "bevy_shine" }
# modular_character = { path = "modular_character" }
bevy_waltz = { path = "bevy_waltz" }
crossbeam-channel = "0.5.15"
tracing-appender = "0.2.3"

[patch.crates-io]
bevy = { path = "../bevy_engines/bevy_0.16/" }
bevy_math = { path = "../bevy_engines/bevy_0.16/crates/bevy_math" }
bevy_transform = { path = "../bevy_engines/bevy_0.16/crates/bevy_transform" }
bevy_reflect = { path = "../bevy_engines/bevy_0.16/crates/bevy_reflect" }
bevy_app = { path = "../bevy_engines/bevy_0.16/crates/bevy_app" }
bevy_platform = { path = "../bevy_engines/bevy_0.16/crates/bevy_platform" }
bevy_asset = { path = "../bevy_engines/bevy_0.16/crates/bevy_asset" }
bevy_derive = { path = "../bevy_engines/bevy_0.16/crates/bevy_derive" }
bevy_ecs = { path = "../bevy_engines/bevy_0.16/crates/bevy_ecs" }
bevy_render = { path = "../bevy_engines/bevy_0.16/crates/bevy_render" }
bevy_window = { path = "../bevy_engines/bevy_0.16/crates/bevy_window" }
bevy_image = { path = "../bevy_engines/bevy_0.16/crates/bevy_image" }
bevy_input = { path = "../bevy_engines/bevy_0.16/crates/bevy_input" }
bevy_log = { path = "../bevy_engines/bevy_0.16/crates/bevy_log" }
bevy_picking = { path = "../bevy_engines/bevy_0.16/crates/bevy_picking" }
bevy_time = { path = "../bevy_engines/bevy_0.16/crates/bevy_time" }
bevy_winit = { path = "../bevy_engines/bevy_0.16/crates/bevy_winit" }

bevy-tnua = { path = "../bevy-tnua/" }
bevy-tnua-avian3d = { path = "../bevy-tnua/avian3d/" }
