[package]
name = "bevy_workflow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
        "bevy_shine",
        "bevy_waltz",
        "units/animation_blending",
        "units/bevy_cloth",
        "units/bone_attachments",
        "units/modular_character",
        "units/tps_camera",
]
exclude = ["units/winit_drag_drop"]

[dependencies]
bevy = { version = "0.18.0", features = [
        "wayland",
        "dynamic_linking",
        "hotpatching",
        "asset_processor",
        "file_watcher",
        "experimental_bevy_feathers",
        "free_camera",
] }
# bevy_shine = { path = "bevy_shine" }
# modular_character = { path = "units/modular_character" }
bone_attachments = { path = "units/bone_attachments" }
bevy_waltz = { path = "bevy_waltz" }
crossbeam-channel = "0.5.15"
tracing-appender = "0.2.3"
rand = "0.9.2"

# develop ui toolkit
bevy-inspector-egui = "0.36.0"

[patch.crates-io]
bevy = { path = "../bevy_engines/bevy_0.18/" }
bevy_math = { path = "../bevy_engines/bevy_0.18/crates/bevy_math" }
bevy_transform = { path = "../bevy_engines/bevy_0.18/crates/bevy_transform" }
bevy_reflect = { path = "../bevy_engines/bevy_0.18/crates/bevy_reflect" }
bevy_app = { path = "../bevy_engines/bevy_0.18/crates/bevy_app" }
bevy_platform = { path = "../bevy_engines/bevy_0.18/crates/bevy_platform" }
bevy_asset = { path = "../bevy_engines/bevy_0.18/crates/bevy_asset" }
bevy_derive = { path = "../bevy_engines/bevy_0.18/crates/bevy_derive" }
bevy_ecs = { path = "../bevy_engines/bevy_0.18/crates/bevy_ecs" }
bevy_render = { path = "../bevy_engines/bevy_0.18/crates/bevy_render" }
bevy_window = { path = "../bevy_engines/bevy_0.18/crates/bevy_window" }
bevy_image = { path = "../bevy_engines/bevy_0.18/crates/bevy_image" }
bevy_input = { path = "../bevy_engines/bevy_0.18/crates/bevy_input" }
bevy_log = { path = "../bevy_engines/bevy_0.18/crates/bevy_log" }
bevy_picking = { path = "../bevy_engines/bevy_0.18/crates/bevy_picking" }
bevy_time = { path = "../bevy_engines/bevy_0.18/crates/bevy_time" }
bevy_winit = { path = "../bevy_engines/bevy_0.18/crates/bevy_winit" }
bevy_animation = { path = "../bevy_engines/bevy_0.18/crates/bevy_animation" }
bevy_scene = { path = "../bevy_engines/bevy_0.18/crates/bevy_scene" }
bevy_solari = { path = "../bevy_engines/bevy_0.18/crates/bevy_solari" }
bevy_camera = { path = "../bevy_engines/bevy_0.18/crates/bevy_camera" }
bevy_color = { path = "../bevy_engines/bevy_0.18/crates/bevy_color" }
bevy_core_pipeline = { path = "../bevy_engines/bevy_0.18/crates/bevy_core_pipeline" }
bevy_mesh = { path = "../bevy_engines/bevy_0.18/crates/bevy_mesh" }
bevy_shader = { path = "../bevy_engines/bevy_0.18/crates/bevy_shader" }
bevy_ui_render = { path = "../bevy_engines/bevy_0.18/crates/bevy_ui_render" }
bevy_light = { path = "../bevy_engines/bevy_0.18/crates/bevy_light" }
bevy_pbr = { path = "../bevy_engines/bevy_0.18/crates/bevy_pbr" }
bevy_state = { path = "../bevy_engines/bevy_0.18/crates/bevy_state" }
bevy_utils = { path = "../bevy_engines/bevy_0.18/crates/bevy_utils" }
bevy_feathers = { path = "../bevy_engines/bevy_0.18/crates/bevy_feathers" }

# avian3d = { path = "../avian/crates/avian3d/" }
# bevy-tnua = { path = "../bevy-tnua/" }
# bevy-tnua-avian3d = { path = "../bevy-tnua/avian3d/" }

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/bevy_ui_debug"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
