[package]
name = "bevy_waltz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["wayland", "dynamic_linking", "hotpatching"] }

# physic engine
avian3d = "0.4.1"

# character system
bevy-tnua = "0.26.0"
bevy-tnua-avian3d = "0.8.0"

# control system
bevy_enhanced_input = "0.19.1"

#
serde = { version = "1", features = ["derive"] }

# bone attachments
bone_attachments = { path = "../units/bone_attachments" }

# develop ui toolkit
bevy-inspector-egui = "0.34.0"

[dependencies.bevy_dolly]
git = "https://github.com/Gaeric/bevy_dolly/"
branch = "main"

# develop ui toolkit
[dependencies.iyes_perf_ui]
git = "https://github.com/mgi388/iyes_perf_ui/"
branch = "bevy-0.17"

# frame limit
[dependencies.bevy_framepace]
git = "https://github.com/aevyrie/bevy_framepace"
branch = "main"

# [dependencies.bevy-inspector-egui]
# git = "https://github.com/dsgallups/bevy-inspector-egui"
# branch = "dsgallups/0.17"
# optional = true
