[package]
name = "bevy_waltz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = [
        "wayland",
        "dynamic_linking",
        "hotpatching",
] }

# physic engine
avian3d = { version = "0.5.0", features = ["diagnostic_ui"] }

# character system
bevy-tnua = "0.29.0"
bevy-tnua-avian3d = "0.10.0"

# control system
bevy_enhanced_input = "0.22"

#
serde = { version = "1", features = ["derive"] }

# bone attachments
bone_attachments = { path = "../units/bone_attachments" }

# frame limit
[dependencies.bevy_framepace]
git = "https://github.com/aevyrie/bevy_framepace/"
branch = "main"

# develop ui toolkit
[dependencies.iyes_perf_ui]
git = "https://github.com/blip-radar/iyes_perf_ui/"
branch = "bevy-0-18"
